--- a/.env
+++ b/.env
@@ -4,11 +4,11 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-POSTGRES_URL="postgres://default:1UkKbYEzT2dR@ep-sparkling-sound-a7p1rgzj-pooler.ap-southeast-2.aws.neon.tech:5432/verceldb?sslmode=require"
-POSTGRES_PRISMA_URL="postgres://default:1UkKbYEzT2dR@ep-sparkling-sound-a7p1rgzj-pooler.ap-southeast-2.aws.neon.tech:5432/verceldb?sslmode=require&pgbouncer=true&connect_timeout=15"
-POSTGRES_URL_NO_SSL="postgres://default:1UkKbYEzT2dR@ep-sparkling-sound-a7p1rgzj-pooler.ap-southeast-2.aws.neon.tech:5432/verceldb"
-POSTGRES_URL_NON_POOLING="postgres://default:1UkKbYEzT2dR@ep-sparkling-sound-a7p1rgzj.ap-southeast-2.aws.neon.tech:5432/verceldb?sslmode=require"
+POSTGRES_URL="postgres://default:1yZRB8DYOvcM@ep-quiet-cloud-a7v5d5q9-pooler.ap-southeast-2.aws.neon.tech:5432/verceldb?sslmode=require"
+POSTGRES_PRISMA_URL="postgres://default:1yZRB8DYOvcM@ep-quiet-cloud-a7v5d5q9-pooler.ap-southeast-2.aws.neon.tech:5432/verceldb?sslmode=require&pgbouncer=true&connect_timeout=15"
+POSTGRES_URL_NO_SSL="postgres://default:1yZRB8DYOvcM@ep-quiet-cloud-a7v5d5q9-pooler.ap-southeast-2.aws.neon.tech:5432/verceldb"
+POSTGRES_URL_NON_POOLING="postgres://default:1yZRB8DYOvcM@ep-quiet-cloud-a7v5d5q9.ap-southeast-2.aws.neon.tech:5432/verceldb?sslmode=require"
 POSTGRES_USER="default"
-POSTGRES_HOST="ep-sparkling-sound-a7p1rgzj-pooler.ap-southeast-2.aws.neon.tech"
-POSTGRES_PASSWORD="1UkKbYEzT2dR"
+POSTGRES_HOST="ep-quiet-cloud-a7v5d5q9-pooler.ap-southeast-2.aws.neon.tech"
+POSTGRES_PASSWORD="1yZRB8DYOvcM"
 POSTGRES_DATABASE="verceldb"
