Changed database to Supabase, revamped Grid UI and debounce features

--- a/.env
+++ b/.env
@@ -12,3 +12,5 @@ POSTGRES_USER="default"
 POSTGRES_HOST="ep-quiet-cloud-a7v5d5q9-pooler.ap-southeast-2.aws.neon.tech"
 POSTGRES_PASSWORD="1yZRB8DYOvcM"
 POSTGRES_DATABASE="verceldb"
+
+DATABASE_URL="postgresql://postgres.daevqrcxgopzgumrpvps:zXw0I6kRaKR3EM7x@aws-0-ap-southeast-2.pooler.supabase.com:5432/postgres"
